Put a segment class above chains and sses